--- a/.env
+++ b/.env
@@ -33,21 +33,19 @@ CI_ENVIRONMENT = development
 database.default.hostname = 127.0.0.1
 database.default.database = chakanoks_db
 database.default.username = root
-database.default.password = admin
+database.default.password = 
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
 
 # If you use MySQLi as tests, first update the values of Config\Database::$tests.
 
-database.default.hostname = 127.0.0.1
-database.default.database = chakanoks_db
-database.default.username = root
-database.default.password = admin
-database.default.DBDriver = MySQLi
-database.default.port = 3306
-database.default.charset = utf8mb4
-database.default.DBCollat = utf8mb4_general_ci
+#database.default.hostname = 127.0.0.1
+#atabase.default.password = admin
+#database.default.DBDriver = MySQLi
+#database.default.port = 3306
+#database.default.charset = utf8mb4
+#database.default.DBCollat = utf8mb4_general_ci
 
 
 #--------------------------------------------------------------------
