--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ CI_ENVIRONMENT = development
 database.default.hostname = localhost
 database.default.database = chakanoks_db
 database.default.username = root
-database.default.password =
+database.default.password = admin
 database.default.DBDriver = MySQLi
 database.default.DBPrefix =
 database.default.port = 3306
